<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        card_view:cardElevation="15dp"
        card_view:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/info_Type"
                android:layout_width="167dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="128dp"
                android:ellipsize="end"
                android:fontFamily="@font/sfprosemibold"
                android:gravity="left"
                android:text="@string/event_card_title"
                android:textColor="@color/lesslightgreen"
                android:textSize="15dp"
                card_view:layout_constraintLeft_toRightOf="@id/imageView" />

            <TextView
                android:id="@+id/info_Title"
                android:layout_width="237dp"
                android:layout_height="23dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="128dp"
                android:ellipsize="end"
                android:fontFamily="@font/sfproheavy"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/event_card_name"
                android:textColor="@color/lightorange"
                android:textSize="18dp"
                card_view:layout_constraintLeft_toRightOf="@id/imageView"
                card_view:layout_constraintTop_toBottomOf="@id/info_Type" />

            <TextView
                android:id="@+id/info_Description"
                android:layout_width="241dp"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="128dp"
                android:fontFamily="@font/sfproregular"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:text="@string/event_card_description"
                android:textColor="@color/darkblue"
                android:textSize="12dp"
                card_view:layout_constraintLeft_toRightOf="@id/imageView"
                card_view:layout_constraintTop_toBottomOf="@id/info_Title" />

            <TextView
                android:id="@+id/info_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/sfproregular"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:text="@string/event_card_date"
                android:textColor="@color/grey"
                android:textSize="12dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"

                card_view:layout_constraintHorizontal_bias="10.0"
                card_view:layout_constraintBottom_toTopOf="@+id/info_Title"
                card_view:layout_constraintLeft_toRightOf="@id/info_Type"
                card_view:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>