<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        card_view:cardElevation="15dp"
        card_view:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                card_view:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/info_Full_Name"
                android:layout_width="237dp"
                android:layout_height="23dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginLeft="128dp"
                android:ellipsize="end"
                android:fontFamily="@font/sfproheavy"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/name_applicant_card"
                android:textColor="@color/lightorange"
                android:textSize="18dp"
                card_view:layout_constraintLeft_toRightOf="@id/imageViewProfilePicture"
                card_view:layout_constraintBottom_toTopOf="@id/info_City"
                />
            <TextView
                android:id="@+id/info_City"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="1dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/sfprosemibold"
                android:gravity="left"
                android:text="@string/city_applicant_card"
                android:textColor="@color/material_dynamic_primary50"
                android:textSize="15dp"
                card_view:layout_constraintLeft_toRightOf="@id/imageViewProfilePicture"
                card_view:layout_constraintTop_toBottomOf="@id/info_Full_Name" />

            <TextView
                android:id="@+id/info_Age"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="1dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/sfprosemibold"
                android:gravity="left"
                android:text="27"
                android:textColor="@color/material_dynamic_primary50"
                android:textSize="15dp"
                card_view:layout_constraintLeft_toRightOf="@id/info_City"
                card_view:layout_constraintTop_toBottomOf="@id/info_Full_Name" />
            <TextView
                android:id="@+id/info_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="1dp"
                android:fontFamily="@font/sfprosemibold"
                android:gravity="left"
                android:text="@string/gender_applicant_card"
                android:textColor="@color/material_dynamic_primary50"
                android:textSize="15dp"
                card_view:layout_constraintLeft_toRightOf="@id/info_Age"
                card_view:layout_constraintTop_toBottomOf="@id/info_Full_Name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>